templates/fdi-dotstatsuite_template.yaml
---
# Source: fdi-dotstatsuite/templates/svc/authz.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-authz
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-authz
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-authz
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-authz
---
# Source: fdi-dotstatsuite/templates/svc/nsidesign.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-design
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-design
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-design
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-design
---
# Source: fdi-dotstatsuite/templates/svc/nsireset.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-reset
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-reset
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-reset
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-reset
---
# Source: fdi-dotstatsuite/templates/svc/nsistable.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-stable
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-stable
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-stable
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-stable
---
# Source: fdi-dotstatsuite/templates/svc/nsistaging.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-staging
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-staging
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-staging
---
# Source: fdi-dotstatsuite/templates/svc/transfer.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-fdi-dotstatsuite-transfer
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-transfer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-transfer
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name-transfer
---
# Source: fdi-dotstatsuite/templates/deploy/authz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-authz
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-authz
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-authz
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-authz
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-authz
      securityContext:
        {}
      containers:
        - name: release-name-fdi-dotstatsuite-authz
          securityContext:
            {}
          image: "siscc/dotstatsuite-core-auth-management:master"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
---
# Source: fdi-dotstatsuite/templates/deploy/nsidesign.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-design
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-design
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-design
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-design
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-design
      securityContext:
        {}
      containers:
        - name: release-name-fdi-dotstatsuite-design
          securityContext:
            {}
          image: "siscc/sdmxri-nsi-maapi:master"
          imagePullPolicy: Always
          volumeMounts: 
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 16Gi
            requests:
              cpu: 100m
              memory: 8Gi
      volumes:
---
# Source: fdi-dotstatsuite/templates/deploy/nsireset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-reset
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-reset
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-reset
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-reset
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-reset
      securityContext:
        {}

      containers:
        - name: release-name-fdi-dotstatsuite-reset
          securityContext:
            {}
          image: "siscc/sdmxri-nsi-maapi:master"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 16Gi
            requests:
              cpu: 100m
              memory: 8Gi
      volumes:
---
# Source: fdi-dotstatsuite/templates/deploy/nsistable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-stable
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-stable
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-stable
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-stable
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-stable
      securityContext:
        {}
      containers:
        - name: release-name-fdi-dotstatsuite-stable
          securityContext:
            {}
          image: "siscc/sdmxri-nsi-maapi:master"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 16Gi
            requests:
              cpu: 100m
              memory: 8Gi
      volumes:
---
# Source: fdi-dotstatsuite/templates/deploy/nsistaging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-staging
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-staging
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-staging
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-staging
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-staging
      securityContext:
        {}        
      containers:
        - name: release-name-fdi-dotstatsuite-staging
          securityContext:
            {}
          image: "siscc/sdmxri-nsi-maapi:master"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 16Gi
            requests:
              cpu: 100m
              memory: 8Gi
      volumes:
---
# Source: fdi-dotstatsuite/templates/deploy/transfer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-fdi-dotstatsuite-transfer
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-transfer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite
      app.kubernetes.io/instance: release-name-transfer
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: '1433'
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite
        app.kubernetes.io/instance: release-name-transfer
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: release-name-fdi-dotstatsuite-transfer
      securityContext:
        {}
      containers:
        - name: release-name-fdi-dotstatsuite-transfer
          securityContext:
            {}
          image: "siscc/dotstatsuite-core-transfer:master"
          imagePullPolicy: Always
          volumeMounts:
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 16Gi
            requests:
              cpu: 100m
              memory: 8Gi
      volumes:
---
# Source: fdi-dotstatsuite/templates/ing/authz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-authz
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-authz
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "authz-siscc.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-authz
                port:
                  number: 80
---
# Source: fdi-dotstatsuite/templates/ing/nsidesign.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-design
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-design
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "fdi-design-ccei.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-design
                port:
                  number: 80
---
# Source: fdi-dotstatsuite/templates/ing/nsireset.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-reset
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-reset
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "fdi-reset-ccei.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-reset
                port:
                  number: 80
---
# Source: fdi-dotstatsuite/templates/ing/nsistable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-stable
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-stable
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "fdi-stable-ccei.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-stable
                port:
                  number: 80
---
# Source: fdi-dotstatsuite/templates/ing/nsistaging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-staging
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-staging
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "fdi-staging-ccei.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-staging
                port:
                  number: 80
---
# Source: fdi-dotstatsuite/templates/ing/transfer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-fdi-dotstatsuite-transfer
  labels:
    helm.sh/chart: fdi-dotstatsuite-0.2.21
    app.kubernetes.io/name: fdi-dotstatsuite
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "7.2.0"
    app.kubernetes.io/managed-by: Helm-transfer
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "fdi-transfer-sdmx.redpelicans.com"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-fdi-dotstatsuite-transfer
                port:
                  number: 80
